fixed margin spacing for fighters and alphabetized fighter list

--- a/style.css
+++ b/style.css
@@ -51,3 +51,7 @@ h2 {
 	display: flex;
 	flex-direction: column;
 }
+
+#fList p {
+	margin: 0;
+}
